@@ -1,19 +1,29 @@
-FROM openjdk:8-jdk AS workspace
-
-COPY . /root/project
+FROM openjdk:11.0.2-jdk AS workspace
 
 WORKDIR /root/project
+COPY gradle gradle/
+COPY gradlew ./
+RUN ./gradlew --no-daemon --version
 
-RUN ./gradlew --no-daemon build -x check
+ENV TERM=dumb
 
-FROM openjdk:8-jre
+COPY  build.gradle ./
+RUN ./gradlew --info --no-daemon --console=plain downloadDependencies
+
+COPY . .
+
+RUN ./gradlew --no-daemon --info --console=plain build -x check
+
+FROM openjdk:11-jre
 
 WORKDIR /app
+
+RUN java -Xshare:dump
 
 COPY --from=workspace /root/project/app/build/libs/app.jar app.jar
 COPY --from=workspace /root/project/plugins/*/build/libs/*.jar plugins/
 
 ENV JAVA_OPTS=""
-ENV JAVA_MEMORY_OPTS="-XX:+ExitOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -XshowSettings:vm"
+ENV JAVA_MEMORY_OPTS="-XX:+ExitOnOutOfMemoryError -XshowSettings:vm -noverify"
 
-CMD ["sh", "-c", "java $JAVA_MEMORY_OPTS $JAVA_OPTS -jar app.jar"]
+CMD ["sh", "-c", "java -Xshare:on $JAVA_MEMORY_OPTS $JAVA_OPTS -jar app.jar"]
